@@ -1,6 +1,7 @@
 {{$NEXT}}
   - allow prototypes containing &
   - add Each polciy
+  - make StrictWarnings policy configurable with extra importers
 
 0.002     2015-06-27 00:07:19 EDT
   - add AmpersandSubCalls policy
